Light and dark mode options no longer rely on JavaScript

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,13 @@
-:root {
+:root:has(input[id="browser-theme"]:checked) {
 	color-scheme: light dark;
+}
+
+:root:has(input[id="dark-theme"]:checked) {
+	color-scheme: dark;
+}
+
+:root:has(input[id="light-theme"]:checked) {
+	color-scheme: light;
 }
 
 body, textarea {
